# utils

./: .gitignore  .pre-commit-config.yaml  Makefile  TODO.md  pyproject.toml
core/llm/: ollama.py
core/logger/: constants.py  log.py
core/workers/: base.py  concurrent.py  parallel.py
examples/: docstring_generator.py  workers.py
tests/: test_workers.py
