[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Victor Faro <victor.faro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"


[tool.poetry.group.debug.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.12.0"}


[tool.poetry.group.linter.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
