[tool.poetry]
name = "faro"
version = "0.1.0"
description = ""
authors = ["Victor Faro <victor.faro@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
colorlog = "^6.9.0"


[tool.poetry.group.debug.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.12.0"}


[tool.poetry.group.linter.dependencies]
pre-commit = "^4.0.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
