[tool.poetry]
name = "faro"
version = "0.1.0"
description = ""
authors = ["Victor Faro <victor.faro@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
colorlog = "^6.9.0"


[tool.poetry.group.debug.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.12.0"}


[tool.poetry.group.linter.dependencies]
pre-commit = "^4.0.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"


[tool.poetry.group.llm.dependencies]
langchain = "^0.3.7"
langchain-ollama = "^0.2.0"


[tool.poetry.extras]
"llm" = ["langchain", "langchain-ollama"]
"test" = ["pytest", "pytest-cov"]
"linter" = ["pre-commit"]
"debug" = ["python-lsp-server"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
